[package]
name = "pongrust"
version = "0.1.0"
authors = ["Will Eaton <wseaton93@gmail.com>"]

[dependencies]
rocket = "0.2.6"
rocket_codegen = "0.2.6"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates"]